# lol-review

./: .editorconfig  .gitignore  COACH_CLEANUP_AUDIT.md  COACH_STATUS.md  CODEBASE_ONBOARDING.md  CONTRIBUTING.md  LICENSE  LoLReview.sln  MORNING_REPORT.md  PERF_REPORT.md  README.md  Revu.sln  SECURITY.md  build.py  makepri.bat  rebuild.bat  requirements.txt  run.bat  run.pyw
.claude/: settings.local.json
coach/: PRIVACY.md  README.md  pyproject.toml  requirements-core.txt  requirements-ml.txt
coach/coach/: __init__.py  _extras.py  config.py  db.py  main.py  schemas.py  text_sanitizer.py
coach/coach/concepts/: __init__.py  clusterer.py  embedder.py  extractor.py  profiler.py
coach/coach/migrations/: 0001_initial.sql  0002_chat.sql
coach/coach/modes/: __init__.py  ask.py  clip_reviewer.py  generate_objective.py  post_game.py  session_coach.py  weekly_coach.py
coach/coach/prompts/: ask.md  clip_reviewer.md  concept_extraction.md  frame_description.md  generate_objective.md  post_game.md  session_coach.md  weekly_coach.md
coach/coach/providers/: __init__.py  base.py  factory.py  google_ai.py  ollama.py  openrouter.py
coach/coach/signals/: __init__.py  features.py  ranker.py  stability.py
coach/coach/summaries/: __init__.py  compactor.py  key_events.py  win_probability.py
coach/coach/vision/: __init__.py  describer.py  frame_sampler.py
coach/packaging/: README.md  build-core.ps1  build-ml.ps1
coach/tests/: conftest.py  test_ask_messages.py  test_config_and_routes.py  test_db_safety.py
csharp/: LoLReview.sln  makepri.bat
desktop/: package-lock.json  package.json  vite.config.js
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs  sidecar.rs
docs/: COACH_PLAN.md  COACH_STATUS.md  CODEBASE_ONBOARDING.md  CODE_SIGNING_PLAN.md  FUTURE_WORK.md  KNOWN_ISSUES.md  LAUNCH_READINESS.md  MORNING_REPORT.md  OBJECTIVES_CUSTOM_PROMPTS_PLAN.md  PERF_BASELINE.md  PERF_LONG_SOAK.md  PRERELEASE_CHECKLIST.md  REDDIT_PRE_ALPHA_RUNBOOK.md  REVU_RENAME_PLAN.md  TELEMETRY_DECISION.md  UI_REDESIGN_HANDOFF.md  V1_LAUNCH_PREP_PLAN.md  V2_16_BACKLOG.md  V2_17_BACKLOG.md
launcher/: launcher.c
mockups/: app-mockup.html  color-options.html
proxy/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
(+954 files in other folders)
