[package]
name = "revu-desktop"
version = "0.1.0"
description = "Revu desktop (Tauri shell over the Revu.Sidecar C# backend)"
edition = "2021"
rust-version = "1.77"

[lib]
name = "revu_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
# Settings page native ops (Batch 6): folder/save-file dialogs + writing the
# Markdown export to the chosen path. We drive these from Rust commands (the app
# routes everything through invoke()), so the plugins' Rust APIs are used; the
# capabilities file also grants their JS surface for completeness.
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["time", "process", "fs"] }
# SSE stream parsing (LCU live channel, Batch 5): StreamExt over reqwest's
# bytes_stream() in sidecar::stream_sse.
futures-util = "0.3"
dirs = "5"

[features]
custom-protocol = ["tauri/custom-protocol"]
